all is working based on requirements and manual testing.
refactored get_entries for filtering
add jsonify_template
added login_required and anon_only decorators
process signup form, and handle errors
process login form + errors
process add_entry form
update weekly avgs on entry
process filter
refactored js code
added jquery-ui, modernizr
restructured templates to allow ajax-only updates

--- a/templates/dynamic.html
+++ b/templates/dynamic.html
@@ -1,10 +1,15 @@
-{% if not session.uid %}
 <div class=metanav>
+{% if not session.uid %}
   <a href=# id=login>Log in</a>
   /
   <a href=# id=signup>Sign up</a>
 {% else %}
+  <a href=# id=entries>Entries</a>
+  <a href=# id=weekly>Weekly Summary</a>
   <a href=# id=logout>Logout</a>
 {% endif %}
 </div>
+{% for message in get_flashed_messages() %}
+  <div class=flash>{{ message }}</div>
+{% endfor %}
 {% block body %}{% endblock %}
