--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,11 +2,13 @@
 <title>Joggr</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
 <script src=" {{ url_for('static', filename='jquery.form.js') }} "></script>
+<script src=" {{ url_for('static', filename='modernizr.js') }} "></script>
 <script src=" {{ url_for('static', filename='joggr.js') }} "></script>
 <div class=page>
   <h1>Joggr</h1>
-  <h2>Jog the world, one step at a time</h2>
   <div class=body>
     Loading...
   </div>
