--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,16 @@
 {% extends "dynamic.html" %}
 {% block body %}
+  <h2>Login</h2>
+  {% if error %}<div class=error><strong>Error:</strong> {{ error }}</div>{% endif %}
   <form id=login action="{{ url_for('login') }}" method=post>
-    Login
     <dl>
       <dt>Email:
-        <dd><input type=text size=30 name=email>
-        <dt>Password:
-        <dd><input type=password name=password>
-        <dd><input type=submit value=Login>
-        <dd><input type=submit value=Cancel>
+      <dd><input required type=email size=30 name=email placeholder="Enter the email you signed up with">
+      <dt>Password:
+      <dd><input required type=password name=password>
     </dl>
+    <div class="actions">
+      <input type=submit value=Login>
+    </div>
   </form>
 {% endblock %}
